--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   <a href="présentation.html">Présentation</a> 
-   <a href="services.html">services</a>
-   <a href="contact.html">contact</a>
+   <a href="présentation.html">Présentation</a> <br>
+   <a href="services.html">services</a><br>
+   <a href="contact.html">contact</a> <br>
 </body>
 </html>
