--- a/présentation.html
+++ b/présentation.html
@@ -9,15 +9,15 @@
 <body>
     <h1>Crée en 1990 ,notre entreprise possède 3 unités :</h1>
     <ol>
-        <li>Une unité de filature</li>
-        <li>une unité de teinture</li>
-        <li>une unité de traitement sur pièce </li>
+        <li>Une unité de filature</li> <br>
+        <li>une unité de teinture</li> <br>
+        <li>une unité de traitement sur pièce </li> <br>
     </ol>
     vous pouvez visitez notre siege
-    <a href="siege.html" > <img src="study.jpg" ></a>
-    <a href="accueil.html">accueil</a> <a href="services.html">Services</a><a href="contact.html">contact</a>
-    <br> Nous offrons les services suivant :
-    <a href="services.html">service1</a>
+    <a href="siege.html" > <img src="study.jpg" ></a> <br>
+    <a href="accueil.html">accueil</a> <br> <a href="services.html">Services</a> <br> <a href="contact.html">contact</a>
+    <br> Nous offrons les services suivant :<br>
+    <a href="services.html">service1</a><br>
     <a href="services.html">service2</a>
 </body>
 
